--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(240, 240, 240);
+}
 nav {
     padding: 1rem;
     display: flex;
@@ -29,17 +32,23 @@ ul li a {
 
 .signup ,
 .login {
-    width: 350px;
+    width: 380px;
     text-align: center;
     margin: 0 auto;
+    background-color: #ffffff;
+    padding: 1rem 20px;
+    border-radius: 10px;
 }
 
 .signup form input,
 .login form input {
     display: block;
     width: 100%;
-    margin: 10px 0;
-    padding: .2rem .3rem;
+    margin: 1rem 0;
+    padding: .3rem .8rem;
+    outline: none;
+    border: 1px solid rgba(204, 204, 204, 0.867);
+    border-radius: 5px;
 }
 
 .error-message {
